[metadata]
name = pyscaffold
version = attr: pyscaffold.__version__
description = A description of pyscaffold
long_description = file: README.rst
author = My pyscaffold
author_email = pyscaffold@email.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
install_requires =
    typer

[options.entry_points]
console_scripts =
    pyscaffold = pyscaffold.cli:app

[flake8]
exclude = docs
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,N801,N802,N805,N806

[aliases]
test=pytest
