[metadata]
name = pyscaffold
version = attr: pyscaffold.__version__
description = A description of pyscaffold
long_description = file: README.rst
author = My pyscaffold
author_email = pyscaffold@email.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.11

[options]
packages = pyscaffold
package_dir =
    = src
install_requires =
    typer

[options.entry_points]
console_scripts =
    pyscaffold = pyscaffold.cli:app

[aliases]
test=pytest
